Updates from Overleaf

--- a/inputs/research.tex
+++ b/inputs/research.tex
@@ -1,6 +1,5 @@
-\begin{refsection}
+%\begin{refsection}
 \section{Research Work}
-\label{sec:work}
 
 \input{inputs/condensa}
 \input{inputs/shannon}
@@ -8,4 +7,4 @@
 \input{inputs/proposal}
 
 
-\end{refsection}
+%\end{refsection}
