--- a/inputs/timeline.tex
+++ b/inputs/timeline.tex
@@ -1,4 +1,4 @@
-\begin{refsection}
+%\begin{refsection}
 \section{Timeline, Remaining Work, Plans}
 \label{sec:timeline}
 
@@ -28,4 +28,4 @@ Mitigating the Bias \& Attribution Problems for Safety \& Fairness & KDD 2021 (P
 \end{center}
 \end{table*}
 
-\end{refsection}
+%\end{refsection}
