--- a/inputs/vision.tex
+++ b/inputs/vision.tex
@@ -1,6 +1,5 @@
-\begin{refsection}
+%\begin{refsection}
 \section{Broader Impact} 
-\label{sec:timeline}
 
 Non-Vision Apps
 
@@ -8,4 +7,4 @@ Scene-Graph Preservation
 
 Condensa-ZFP : Using New Loss functions
 
-\end{refsection}
+%\end{refsection}
