--- a/main.tex
+++ b/main.tex
@@ -240,8 +240,7 @@ mathescape=true}
 \include{inputs/thesis}
 \include{inputs/research}
 \include{inputs/timeline}
-\include{inputs/vision}
-
+%\include{inputs/vision}
 \printbibliography
 
 \end{document}
