--- a/inputs/intro.tex
+++ b/inputs/intro.tex
@@ -1,7 +1,6 @@
-\begin{refsection}
-
+%\begin{refsection}
 \section{Introduction}
-\label{sec:intro}
+
 
 Modern deep neural networks (DNNs) are complex,
 and often contain millions of parameters spanning
@@ -109,10 +108,6 @@ Here, the user didn't have to specify any
 sparsities manually, and instead only had to define a domain-specific
 objective function to maximize (inference throughput, in this case).
 
-
-
-
-
 \begin{figure*}[!t]
 \centering
   % \includegraphics[width=0.8\textwidth,height=10cm]{CVPR2021/img/FinalIntroFigure.pdf}
@@ -121,4 +116,4 @@ objective function to maximize (inference throughput, in this case).
   \label{fig:overview}
 \end{figure*}
 
-\end{refsection}
+%\end{refsection}
